--- a/index.html
+++ b/index.html
@@ -4798,7 +4798,7 @@
                                                                                             
                                                                                                         
                                                                                                         <div style="display:flex;justify-content:center;align-items:center;">
-                                                                                                            <small style="color:var(--danger);font-weight:600;">Absences</small>
+                                                                                                            <small style="color:red;font-weight:600;">Absences</small>
                                                                                                         </div>
 
                                                                                                         <div style="display:flex;justify-content:space-around;align-items:center;margin-top:10px;padding-top:10px;border-top:1px solid var(--border-color);">
@@ -5437,7 +5437,7 @@
                                                                                                                 <div class="subject-row header">
                                                                                                                     <div class="subject-code">SUBJECT/<br>COUSRSE CODE</div>
                                                                                                                     <div class="subject-title">Subject Title</div>
-                                                                                                                    <div class="subject-prerequisite">Pre-requisite</div>
+                                                                                                                    <div class="subject-title">Pre-requisite</div>
                                                                                                                     <div class="subject-units">Units</div>
                                                                                                                     <div class="subject-grade">Grade</div>
                                                                                                                     <div class="subject-remarks">Remarks</div>
@@ -5491,7 +5491,7 @@
                                                                                                                 <div class="subject-row header">
                                                                                                                     <div class="subject-code">SUBJECT/<br>COUSRSE CODE</div>
                                                                                                                     <div class="subject-title">Subject Title</div>
-                                                                                                                    <div class="subject-prerequisite">Pre-requisite</div>
+                                                                                                                    <div class="subject-title">Pre-requisite</div>
                                                                                                                     <div class="subject-units">Units</div>
                                                                                                                     <div class="subject-grade">Grade</div>
                                                                                                                     <div class="subject-remarks">Remarks</div>
