--- a/index.html
+++ b/index.html
@@ -4651,7 +4651,7 @@
                                                                                         
                                                                                         <div class="nav-category">ADMINISTRATIVE</div>
                                                                                         <li class="nav-item" data-section="requirements">
-                                                                                            <a href="#"><i class="fas fa-file-alt"></i> Document Requirements</a>
+                                                                                            <a href="#"><i class="fas fa-file-alt"></i>Credential Management</a>
                                                                                             <span class="notification-badge" id="requirements-badge">6</span>
                                                                                         </li>
                                                                                         <li class="nav-item" data-section="account">
