--- a/index.html
+++ b/index.html
@@ -60,13 +60,13 @@
                                                                                 color: #ffffff !important;
                                                                             }
 
-                                                                            /* Keep uniform text black in both light and dark mode */
+                                                                            /* Keep uniform text black in light mode, white in dark mode */
                                                                             #uniforms-summary small {
                                                                                 color: #000000 !important;
                                                                             }
 
                                                                             .dark-mode #uniforms-summary small {
-                                                                                color: #000000 !important;
+                                                                                color: #ffffff !important;
                                                                             }
 
                                                                             * {
@@ -418,6 +418,10 @@
                                                                                 color: var(--text-color);
                                                                                 position: relative;
                                                                                 padding-bottom: 10px;
+                                                                            }
+
+                                                                            .dark-mode .page-title {
+                                                                                color: #ffffff;
                                                                             }
 
                                                                             .page-title::after {
@@ -4790,15 +4794,15 @@
                                                                                                     <div class="stat-value" id="uniforms-summary">
                                                                                                             <div style="display:flex;flex-direction:column;gap:6px;">
                                                                                                                 <div data-uniform="BSIT" style="display:flex;justify-content:space-between;align-items:center;">
-                                                                                                                    <small style="color:#000000;">BSIT Uniform</small>
+                                                                                                                    <small style="color:var(--text-color);">BSIT Uniform</small>
                                                                                                                     <i class="fas fa-check-circle" style="color:var(--success)"></i>
                                                                                                                 </div>
                                                                                                                 <div data-uniform="COLLEGE P.E" style="display:flex;justify-content:space-between;align-items:center;">
-                                                                                                                    <small style="color:#000000;">College P.E. Uniform</small>
+                                                                                                                    <small style="color:var(--text-color);">College P.E. Uniform</small>
                                                                                                                     <i class="fas fa-check-circle" style="color:var(--success)"></i>
                                                                                                                 </div>
                                                                                                                 <div data-uniform="NSTP" style="display:flex;justify-content:space-between;align-items:center;">
-                                                                                                                    <small style="color:#000000;">NSTP Uniform</small>
+                                                                                                                    <small style="color:var(--text-color);">NSTP Uniform</small>
                                                                                                                     <i class="fas fa-check-circle" style="color:var(--success)"></i>
                                                                                                                 </div>
                                                                                                             </div>
