--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
                                                                             <head>
                                                                                 <meta charset="UTF-8">
                                                                                 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-                                                                                <title>GATEWAY</title>
+                                                                                <title>Icct Skolaris Gateway</title>
                                                                                 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
                                                                                 <style>
                                                                             :root {
