--- a/index.html
+++ b/index.html
@@ -4543,8 +4543,8 @@
                                                                                 border: 1px solid rgba(255, 255, 255, 0.2);
                                                                                 border-radius: var(--border-radius);
                                                                                 padding: 20px;
-                                                                                width: min(400px, 80%);
-                                                                                max-width: 400px;
+                                                                                width: 50%;
+                                                                                max-width: none;
                                                                                 max-height: 70vh;
                                                                                 overflow-y: auto;
                                                                                 position: relative;
