--- a/index.html
+++ b/index.html
@@ -7461,7 +7461,7 @@
                                                                                             <div class="modal-content glass-modal">
                                                                                                 <div class="modal-header">
                                                                                                     <h2 class="modal-title">
-                                                                                                        <i class="fas fa-x-ray"></i> Radiolog/Imaging Records
+                                                                                                        <i class="fas fa-x-ray"></i> Radiology/Imaging Records
                                                                                                     </h2>
                                                                                                 </div>
                                                                                                 <div class="modal-body">
