--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
                                                                             <head>
                                                                                 <meta charset="UTF-8">
                                                                                 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-                                                                                <title>ICCT ISKOLARIS GATEWAY</title>
+                                                                                <title>ICCT Iskolaris Gateway</title>
                                                                                 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
                                                                                 <style>
                                                                             :root {        
@@ -11052,3 +11052,5 @@
 
                                                                             </body>
                                                                             </html>
+                
+                                                                                
