Update emergency box buttons with specific errors

--- a/index.html
+++ b/index.html
@@ -8517,7 +8517,7 @@
                                                                                                         </button>
 
                                                                                                         <!-- Emergency Box 3 -->
-                                                                                                        <button class="emergency-box" onclick="openEmergency('')">
+                                                                                                        <button class="emergency-box" onclick="openEmergency('Payment Processing Error')">
                                                                                                             <div class="emergency-box-content">
                                                                                                                 <div class="emergency-label">Payment Processing Error</div>
                                                                                                                 <div class="emergency-description">Payment attempt (online or ledger posting) fails or duplicates.</div>
@@ -8525,7 +8525,7 @@
                                                                                                         </button>
 
                                                                                                         <!-- Emergency Box 4 -->
-                                                                                                        <button class="emergency-box" onclick="openEmergency('Alert')">
+                                                                                                        <button class="emergency-box" onclick="openEmergency('Data Sync Error')">
                                                                                                             <div class="emergency-box-content">
                                                                                                                 <div class="emergency-label">Data Sync Error</div>
                                                                                                                 <div class="emergency-description">Grades, schedules, or student info not updating between modules (Registrar ↔ Student).</div>
@@ -8533,7 +8533,7 @@
                                                                                                         </button>
 
                                                                                                         <!-- Emergency Box 5 -->
-                                                                                                        <button class="emergency-box" onclick="openEmergency('Alert')">
+                                                                                                        <button class="emergency-box" onclick="openEmergency('Enrollment Transaction Failed')">
                                                                                                             <div class="emergency-box-content">
                                                                                                                 <div class="emergency-label">Enrollment Transaction Failed</div>
                                                                                                                 <div class="emergency-description">Student cannot finalize enrollment or add/drop subjects.</div>
@@ -8541,14 +8541,14 @@
                                                                                                         </button>
 
                                                                                                         <!-- Emergency Box 6 -->
-                                                                                                        <button class="emergency-box" onclick="openEmergency('Alert')">
+                                                                                                        <button class="emergency-box" onclick="openEmergency('Missing or Corrupted Record')">
                                                                                                             <div class="emergency-box-content">
                                                                                                                 <div class="emergency-label">Missing or Corrupted Record</div>
                                                                                                                 <div class="emergency-description">Missing or Corrupted Record</div>
                                                                                                             </div>
                                                                                                         </button>
                                                                        
-                                                                       <button class="emergency-box" onclick="openEmergency('Alert')">
+                                                                       <button class="emergency-box" onclick="openEmergency('Access Permission Denied (Unexpected)')">
     <div class="emergency-box-content">
         <div class="emergency-label">Access Permission Denied (Unexpected)</div>
         <div class="emergency-description">User role (faculty/student) blocked from an authorized module.</div>
@@ -8557,7 +8557,7 @@
 
 
 
-<button class="emergency-box" onclick="openEmergency('Alert')">
+<button class="emergency-box" onclick="openEmergency('Report Generation Timeout')">
     <div class="emergency-box-content">
         <div class="emergency-label">Report Generation Timeout</div>
         <div class="emergency-description">Downloading PDF (e.g., ORF, SOA, Grades Report) fails or times out.</div>
@@ -8567,7 +8567,7 @@
 
 
 
-<button class="emergency-box" onclick="openEmergency('Alert')">
+<button class="emergency-box" onclick="openEmergency('System Slowness / Lag')">
     <div class="emergency-box-content">
         <div class="emergency-label">System Slowness / Lag</div>
         <div class="emergency-description">Pages take >10s to load or timeout during class schedule retrieval.</div>
@@ -8577,7 +8577,7 @@
 
 
 
-<button class="emergency-box" onclick="openEmergency('Alert')">
+<button class="emergency-box" onclick="openEmergency('Email / Notification Not Received')">
     <div class="emergency-box-content">
         <div class="emergency-label">Email / Notification Not Received</div>
         <div class="emergency-description">Automated alerts, adviser messages, or verification emails not delivered.</div>
