--- a/index.html
+++ b/index.html
@@ -5389,8 +5389,8 @@
                                                                                                     <div class="stat-label">Current GWA</div>
                                                                                                 </div>
                                                                                                 <div class="stat-card">
-                                                                                                    <div class="stat-value" id="pending-requirements-count">12</div><hr>
-                                                                                                    <div class="stat-label">Pending Requirements</div>
+                                                                                                    <div class="stat-value" id="pending-requirements-count">12</div>
+                                                                               <hr>                     <div class="stat-label"> Pending Requirements</div>
                                                                                                 </div>
                                                                                                 <div class="stat-card">
                                                                                                     <div class="stat-value">₱ 0.00
